Changes between 1.9.12 and 1.9.13:
----------------------------------

Application:
 * Allow subtitles on network (except UPnP)
 * Remember subs chosen via this picker
 * Support CC button on remotes
 * Fixes


Changes between 1.9.11 and 1.9.12:
----------------------------------

Application:
 * Allow subtitles download for any video
 * Add subtitles downloader in video player
 * Improve UI update while scanning device for media
 * Show loading animation when video player is buffering
 * Fix grouping videos starting with "The"
 * Fix some UI glitch whel 'large fonts' accessibility setting is activated

TV:
 * Improve Audio Player view
 * Fix network folders details view

Core:
 * Fix some deadlock in mkv files playback
 * Detect subtitles on network
 * Update codecs and demuxers
 * Improve thumbnail generation speed


Changes between 1.9.10 and 1.9.11:
----------------------------------

Application:
 * Fix thumbnails look
 * Fix seeking state when lock

Core:
 * Update codecs and demuxers


Changes between 1.9.9 and 1.9.10:
--------------------------------

Application:
 * Fix crash while searching
 * Fix crash in settings -> Directories
 * Fix delay/spped controls invisible with hdmi/screencast
 * Fix loading video from 3rd party app with space in its name
 * Added Tamil language for subtitles download


Changes between 1.9.8 and 1.9.9:
--------------------------------

Application:
 * Fix navigation with DPAD
 * Improved RTL support
 * Browsers: go back at root level on navigation menu category click
 * Fix position in video not restored when launched from an external app
 * Improved design in playlist, history and browsers
 * Misc. fixes

TV:
 * Changed video player controls:
    - ↓ shows control panel
    - ↑ shows advanced options
    - ← and → seek in video
    - OK/Select button toggles play/pays when control panel is not displayed


Changes between 1.9.7 and 1.9.8:
--------------------------------

Application: